# muscles-wsgi

./: pyproject.toml
docs/: request.md  start.md  template.md  wsgi-page.md  wsgi-restapi.md
src/muscles/wsgi/: __about__.py  __init__.py
src/muscles/wsgi/assets/: __init__.py  asset.py
src/muscles/wsgi/restful/: restful.py  swagger.py
src/muscles/wsgi/schema_/: __init__.py  column.py  field.py  itinerary.py  model.py  parameters.py  schema.py  security.py  user.py
src/muscles/wsgi/template/: __init__.py  template.py
src/muscles/wsgi/uwsgi/: uwsgi.py
src/muscles/wsgi/watchdog/: watchdog.py
src/muscles/wsgi/wsgi/: __init__.py  actor.py  error_handler.py  http_code.py  request.py  response.py  routers.py  server.py  strategy.py
tests/restful/: test_controller.py  test_request.py  test_swagger.py
tests/wsgi/: test_request.py  test_strategy.py  test_template.py
